src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
    --background: #ffffff;
    --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
    :root {
        --background: #0a0a0a;
        --foreground: #ededed;
    }
}

body {
    color: var(--foreground);
    background: var(--background);
    font-family: var(--font-geist-sans), "Hiragino Kaku Gothic Pro", "微軟正黑體", "蘋果儷中黑",
        Helvetica, Arial, Helvetica, sans-serif;
}

@layer utilities {
    .btn_white {
        @apply border-white bg-white px-8 py-3 text-green-50;
    }
    .btn_white_text {
        @apply border-white bg-white px-8 py-3 text-gray-90;
    }
    .btn_green {
        @apply border-green-50 bg-green-50 px-8 py-5 text-white;
    }
    .btn_dark_green {
        @apply bg-green-90 px-8 py-4 text-white transition-all hover:bg-black;
    }
    .btn_dark_green_outline {
        @apply border-gray-20 bg-green-90 px-8 py-5 text-white;
    }

    .max-container {
        @apply mx-auto max-w-[1440px];
    }

    .padding-container {
        @apply px-6 lg:px-20 3xl:px-0;
    }

    .flexCenter {
        @apply flex items-center justify-center;
    }

    .flexBetween {
        @apply flex items-center justify-between;
    }

    .flexStart {
        @apply flex items-center justify-start;
    }

    .flexEnd {
        @apply flex items-center justify-end;
    }

    /* FONTS */
    .regular-64 {
        @apply text-[64px] font-[400] leading-[120%];
    }

    .regular-40 {
        @apply text-[40px] font-[400] leading-[120%];
    }

    .regular-32 {
        @apply text-[32px] font-[400];
    }

    .regular-24 {
        @apply text-[24px] font-[400];
    }

    .regular-20 {
        @apply text-[20px] font-[400];
    }

    .regular-18 {
        @apply text-[18px] font-[400];
    }

    .regular-16 {
        @apply text-[16px] font-[400];
    }

    .regular-14 {
        @apply text-[14px] font-[400];
    }

    .medium-14 {
        @apply text-[14px] font-[600];
    }

    .bold-88 {
        @apply text-[88px] font-[700] leading-[120%];
    }

    .bold-64 {
        @apply text-[64px] font-[700] leading-[120%];
    }

    .bold-52 {
        @apply text-[52px] font-[700] leading-[120%];
    }

    .bold-40 {
        @apply text-[40px] font-[700] leading-[120%];
    }

    .bold-32 {
        @apply text-[32px] font-[700] leading-[120%];
    }

    .bold-20 {
        @apply text-[20px] font-[700];
    }

    .bold-18 {
        @apply text-[18px] font-[700];
    }

    .bold-16 {
        @apply text-[16px] font-[700];
    }
}

/* Hide scrollbar for Chrome, Safari and Opera */
.hide-scrollbar::-webkit-scrollbar {
    display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.hide-scrollbar {
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
}

* {
    scroll-behavior: smooth;
}

.map-container {
    width: 100%;
    height: 60%; /* Ensure the section takes the full viewport height */
}

.map {
    width: 100%;
    height: 100%; /* Ensure the map takes the full height of its container */
}

.sidebar {
    scrollbar-width: none; /* For Firefox */
    -ms-overflow-style: none; /* For Internet Explorer and Edge */
    grid-template-rows: auto;
}

@media (width >= 64rem) {
    .sidebar {
        grid-template-rows: auto 1fr;
    }
}

.sidebar::-webkit-scrollbar {
    display: none; /* For Chrome, Safari, and Opera */
}

.location_scroll {
    &::-webkit-scrollbar {
        background-color: #433d8b;
        width: 8px;
        border-radius: 8px;
    }
    &::-webkit-scrollbar-thumb {
        border-radius: 8px;
        background-color: #362d6c;
    }
}

/* React Leaflet */

.leaflet-popup-content-wrapper,
.leaflet-popup-content {
    min-width: 365px !important;
}

.leaflet-popup-content-wrapper,
.leaflet-popup-tip {
    background-color: #a29af9 !important;
}

.leaflet-control {
    z-index: 0 !important;
}
.leaflet-pane {
    z-index: 0 !important;
}
.leaflet-top,
.leaflet-bottom {
    z-index: 0 !important;
}

.location_scroll {
    /* max-height: 400px; */
    overflow-y: auto;
}

/* Weather warning flashing border */
@keyframes flashBorder {
    0%,
    100% {
        border-color: transparent;
    }
    50% {
        border-color: var(--flashing-color, red); /* Default to red */
    }
}

.group[data-selected="true"] .group-data-\[selected\=true\]\:border-primary {
    --tw-border-opacity: 1;
    border-color: var(--white) !important;
}

